Refactor PreAnalyzerTest.java